estoque minimo corrigido

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="number" id="product-code" placeholder="Código do produto" required>
         <input type="text" id="product-name" placeholder="Nome do produto" required>
         <input type="text" id="product-description" placeholder="Descrição do produto" required>
-        <input type="text" id="product-minstock" placeholder="Estoque mínimo" required>
+        <input type="number" id="product-minstock" placeholder="Estoque mínimo" required>
         <input type="number" id="price" placeholder="Preço" required>
         <button type="submit">Cadastrar</button>
     </form>
