--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <th>Estoque Mínimo</th>
                 <th>Preço</th>
                 <th>Quantidade</th>
-                <th class="acao">Aumentar</th>
-                <th class="acao">Diminuir</th>
+                <th class="acao">Aumentar ou  Diminuir</th>
             </tr>
         </thead>
         <tbody id="product-list">
