--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
+    <!---
     <h2>Clientes Cadastrados</h2>
+    <ul id="client-list"></ul>-->
 
-    <ul id="client-list"></ul>
+
+    <div class="botoes">
+        <button type="button" id="add_product_button">Adicionar produtos</button>
+        <button type="button" id="relatorio_button">Relatório</button>
+        <button type="button" id="table_button">Mostrar Estoque</button>
+    </div>
+
     <form id="user-registration-form">
         <h2>Cadastro de Usuário</h2>
         <input type="text" id="user-name" placeholder="Nome do usuário" required>
         <button type="submit">Cadastrar</button>
     </form>
 
-    <form id="product-registration-form">
+    <form id="product-registration-form" style="display: none;">
         <h2>Cadastro de Produto</h2>
         <input type="number" id="product-code" placeholder="Código do produto" required>
         <input type="text" id="product-name" placeholder="Nome do produto" required>
@@ -28,7 +36,7 @@
     </form>
 
     <!-- Tabela de Produtos -->
-    <table id="tabela-produtos">
+    <table id="tabela-produtos" style="display: none;">
         <thead>
             <tr>
                 <th>Código</th>
@@ -44,6 +52,13 @@
             <!-- Aqui serão inseridos os produtos dinamicamente -->
         </tbody>
     </table>
+
+
+    <!-- Relatorio -->
+    <div id="relatorio" style="display: none;">
+        <h1>Relatorio</h1>
+    </div>
+
     <script src="main.js"></script>
     </body>
 </html>
