--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <h2>Clientes Cadastrados</h2>
     <ul id="client-list"></ul>-->
 
+    <form id="user-registration-form">
+        <h2>Cadastro de Usuário</h2>
+        <input type="text" id="user-name" placeholder="Nome do usuário" required>
+        <button type="submit">Cadastrar</button>
+    </form>
 
     <div class="botoes">
         <button type="button" id="add_product_button">Adicionar produtos</button>
         <button type="button" id="relatorio_button">Relatório</button>
         <button type="button" id="table_button">Mostrar Estoque</button>
     </div>
-
-    <form id="user-registration-form">
-        <h2>Cadastro de Usuário</h2>
-        <input type="text" id="user-name" placeholder="Nome do usuário" required>
-        <button type="submit">Cadastrar</button>
-    </form>
 
     <form id="product-registration-form" style="display: none;">
         <h2>Cadastro de Produto</h2>
@@ -56,8 +55,31 @@
 
     <!-- Relatorio -->
     <div id="relatorio" style="display: none;">
-        <h1>Relatorio</h1>
+        <form id="relatorio-form">
+            <h2>Gerar Relatório</h2>
+            <label for="minutes">Minutos atrás:</label>
+            <input type="number" id="minutes" placeholder="Informe os minutos" required>
+            <button type="submit">Gerar Relatório</button>
+        </form>
+        <div id="report-container">
+            <h2>Relatório de Movimentos</h2>
+            <!-- Tabela de Relatório de Movimentos -->
+            <table id="report-table">
+                <thead>
+                    <tr>
+                        <th>Código do Produto</th>
+                        <th>Nome do Produto</th>
+                        <th>Movimentos</th>
+                    </tr>
+                </thead>
+                <tbody id="report-body">
+                    <!-- Aqui serão adicionadas as linhas da tabela do relatório -->
+                </tbody>
+            </table>
+        </div>
     </div>
+
+    
 
     <script src="main.js"></script>
     </body>
